include/liblevenshtein_abi.h


typedef struct LlevQueryCacheStats {
    uint64_t requests; 
    uint64_t hits; 
    uint64_t misses; 
    uint64_t admissions; 
    uint64_t rejections; 
    uint64_t evictions; 
    size_t resident_entries; 
    size_t resident_weight; 
} LlevQueryCacheStats;