bindings/haskell/src/VinaryTree/Liblevenshtein.hsc

{-# LANGUAGE CApiFFI #-}
{-# LANGUAGE DerivingStrategies #-}
{-# LANGUAGE LambdaCase #-}
{-# LANGUAGE OverloadedStrings #-}
module VinaryTree.Liblevenshtein
  ( Algorithm(..)
  , QueryOrder(..)
  , Term(..)
  , Match(..)
  , Transducer
  , QueryCache
  , QueryCacheStats(..)
  , Cursor
  , PhoneticPattern
  , PhoneticRules
  , transducer
  , closeTransducer
  , queryCache
  , closeQueryCache
  , queryCacheStats
  , clearQueryCache
  , resetQueryCacheStats
  , cachedQueryText
  , cachedQueryBytes
  , cachedQueryU64
  , queryText
  , queryBytes
  , queryU64
  , queryPattern
  , closeCursor
  , next
  , nextBatch
  , foldBatches
  , regexPattern
  , llrePattern
  , patternMatches
  , patternSize
  , closePattern
  , phoneticRules
  , rulesLength
  , applyRules
  , closeRules
  , distance
  , distanceThreshold
  , damerauDistance
  , damerauDistanceThreshold
  , trueDamerauDistance
  , trueDamerauDistanceThreshold
  ) where

import Prelude hiding (maximum)
import Control.Exception (onException, throwIO)
import Data.ByteString (ByteString)
import qualified Data.ByteString as BS
import qualified Data.ByteString.Unsafe as BSU
import Data.IORef (IORef, atomicModifyIORef', newIORef)
import Data.Text (Text)
import qualified Data.Text.Encoding as Text
import Data.Word (Word8, Word32, Word64)
import Foreign.C.String (peekCString)
import Foreign.C.Types (CChar, CInt(..), CSize(..))
import Foreign.ForeignPtr
  (ForeignPtr, finalizeForeignPtr, newForeignPtr, withForeignPtr)
import Foreign.Marshal.Alloc (allocaBytes)
import Foreign.Marshal.Array (peekArray, withArray)
import Foreign.Marshal.Utils (fillBytes)
import Foreign.Ptr (FunPtr, Ptr, castPtr, plusPtr)
import Foreign.Storable (peekByteOff)
import VinaryTree.Interop
  (DictionaryResource, VtResource, withDictionaryResource)

#include "liblevenshtein.h"

data CTransducer
data CQueryCache
data CQueryCacheStats
data CCursor
data CPattern
data CRules
data CMatch
data CBatch
data COwnedString

data Algorithm = Standard | Transposition | MergeAndSplit | DamerauLevenshtein
  deriving stock (Eq, Ord, Show, Enum, Bounded)
data QueryOrder = Traversal | DistanceThenTerm
  deriving stock (Eq, Ord, Show, Enum, Bounded)
data Term = BytesTerm !ByteString | TextTerm !Text | TokensTerm ![Word64]
  deriving stock (Eq, Show)
data Match = Match { term :: !Term, editDistance :: !Int, identifier :: !(Maybe Word64) }
  deriving stock (Eq, Show)
newtype Transducer = Transducer (ForeignPtr CTransducer)
newtype QueryCache = QueryCache (ForeignPtr CQueryCache)
data QueryCacheStats = QueryCacheStats
  { requests :: !Word64
  , hits :: !Word64
  , misses :: !Word64
  , admissions :: !Word64
  , rejections :: !Word64
  , evictions :: !Word64
  , residentEntries :: !Int
  , residentWeight :: !Int
  } deriving stock (Eq, Show)
data Cursor = Cursor !(ForeignPtr CCursor) !(IORef [Match])
newtype PhoneticPattern = PhoneticPattern (ForeignPtr CPattern)
newtype PhoneticRules = PhoneticRules (ForeignPtr CRules)
type Status = CInt

foreign import ccall unsafe "llev_last_error_message" cLastError :: IO (Ptr CChar)
foreign import ccall unsafe "&llev_transducer_free"
  cTransducerFree :: FunPtr (Ptr CTransducer -> IO ())
foreign import ccall unsafe "&llev_query_cursor_free"
  cCursorFree :: FunPtr (Ptr CCursor -> IO ())
foreign import ccall unsafe "&llev_query_cache_free"
  cQueryCacheFree :: FunPtr (Ptr CQueryCache -> IO ())
foreign import ccall unsafe "&llev_phonetic_pattern_free"
  cPatternFree :: FunPtr (Ptr CPattern -> IO ())
foreign import ccall unsafe "&llev_phonetic_rules_free"
  cRulesFree :: FunPtr (Ptr CRules -> IO ())
foreign import ccall unsafe "llev_transducer_new"
  cTransducerNew :: Ptr VtResource -> Word32 -> Ptr (Ptr CTransducer) -> IO Status
foreign import ccall unsafe "llev_transducer_query_utf8"
  cQueryText :: Ptr CTransducer -> Ptr CChar -> CSize -> CSize -> Word32
             -> Ptr (Ptr CCursor) -> IO Status
foreign import ccall unsafe "llev_transducer_query_bytes"
  cQueryBytes :: Ptr CTransducer -> Ptr Word8 -> CSize -> CSize -> Word32
              -> Ptr (Ptr CCursor) -> IO Status
foreign import ccall unsafe "llev_transducer_query_u64"
  cQueryU64 :: Ptr CTransducer -> Ptr Word64 -> CSize -> CSize -> Word32
            -> Ptr (Ptr CCursor) -> IO Status
foreign import ccall unsafe "llev_query_cache_new"
  cQueryCacheNew :: Ptr CTransducer -> CSize -> CSize
                 -> Ptr (Ptr CQueryCache) -> IO Status
foreign import ccall unsafe "llev_query_cache_clear"
  cQueryCacheClear :: Ptr CQueryCache -> IO Status
foreign import ccall unsafe "llev_query_cache_reset_stats"
  cQueryCacheResetStats :: Ptr CQueryCache -> IO Status
foreign import ccall unsafe "llev_query_cache_stats"
  cQueryCacheStats :: Ptr CQueryCache -> Ptr CQueryCacheStats -> IO Status
foreign import ccall unsafe "llev_query_cache_query_utf8"
  cCachedQueryText :: Ptr CQueryCache -> Ptr CChar -> CSize -> CSize -> Word32
                   -> Ptr (Ptr CCursor) -> IO Status
foreign import ccall unsafe "llev_query_cache_query_bytes"
  cCachedQueryBytes :: Ptr CQueryCache -> Ptr Word8 -> CSize -> CSize -> Word32
                    -> Ptr (Ptr CCursor) -> IO Status
foreign import ccall unsafe "llev_query_cache_query_u64"
  cCachedQueryU64 :: Ptr CQueryCache -> Ptr Word64 -> CSize -> CSize -> Word32
                  -> Ptr (Ptr CCursor) -> IO Status
foreign import ccall unsafe "llev_transducer_query_pattern"
  cQueryPattern :: Ptr CTransducer -> Ptr CPattern -> Word8
                -> Ptr (Ptr CCursor) -> IO Status
foreign import ccall safe "llev_query_cursor_next_batch"
  cNextBatch :: Ptr CCursor -> CSize -> Ptr CBatch -> IO Status
foreign import ccall unsafe "llev_query_cursor_release_batch"
  cReleaseBatch :: Ptr CCursor -> Word64 -> IO Status
foreign import ccall unsafe "llev_phonetic_pattern_compile_regex"
  cRegex :: Ptr CChar -> CSize -> Ptr (Ptr CPattern) -> IO Status
foreign import ccall unsafe "llev_phonetic_pattern_compile_llre"
  cLlre :: Ptr CChar -> CSize -> Ptr (Ptr CPattern) -> IO Status
foreign import ccall unsafe "llev_phonetic_pattern_matches"
  cPatternMatches :: Ptr CPattern -> Ptr CChar -> CSize -> Ptr Word8 -> IO Status
foreign import ccall unsafe "llev_phonetic_pattern_size"
  cPatternSize :: Ptr CPattern -> Ptr CSize -> Ptr CSize -> IO Status
foreign import ccall unsafe "llev_phonetic_rules_builtin"
  cRulesBuiltin :: Word32 -> Ptr (Ptr CRules) -> IO Status
foreign import ccall unsafe "llev_phonetic_rules_parse"
  cRulesParse :: Ptr CChar -> CSize -> Ptr (Ptr CRules) -> IO Status
foreign import ccall unsafe "llev_phonetic_rules_len"
  cRulesLength :: Ptr CRules -> Ptr CSize -> IO Status
foreign import ccall unsafe "llev_phonetic_rules_apply"
  cRulesApply :: Ptr CRules -> Ptr CChar -> CSize -> Ptr COwnedString -> IO Status
foreign import ccall unsafe "llev_owned_string_free"
  cOwnedStringFree :: Ptr COwnedString -> IO ()
foreign import ccall safe "llev_distance"
  cDistance :: Ptr CChar -> CSize -> Ptr CChar -> CSize -> IO CSize
foreign import ccall safe "llev_distance_threshold"
  cDistanceThreshold :: Ptr CChar -> CSize -> Ptr CChar -> CSize -> CSize -> IO CSize
foreign import ccall safe "llev_damerau_distance"
  cDamerau :: Ptr CChar -> CSize -> Ptr CChar -> CSize -> IO CSize
foreign import ccall safe "llev_damerau_distance_threshold"
  cDamerauThreshold :: Ptr CChar -> CSize -> Ptr CChar -> CSize -> CSize -> IO CSize
foreign import ccall safe "llev_true_damerau_distance"
  cTrueDamerau :: Ptr CChar -> CSize -> Ptr CChar -> CSize -> IO CSize
foreign import ccall safe "llev_true_damerau_distance_threshold"
  cTrueDamerauThreshold :: Ptr CChar -> CSize -> Ptr CChar -> CSize -> CSize -> IO CSize

check :: Status -> IO ()
check 0 = pure ()
check _ = cLastError >>= peekCString >>= throwIO . userError

withTransducer :: Transducer -> (Ptr CTransducer -> IO a) -> IO a
withTransducer (Transducer value) = withForeignPtr value
withCursor :: Cursor -> (Ptr CCursor -> IO a) -> IO a
withCursor (Cursor value _) = withForeignPtr value
withQueryCache :: QueryCache -> (Ptr CQueryCache -> IO a) -> IO a
withQueryCache (QueryCache value) = withForeignPtr value
withPattern :: PhoneticPattern -> (Ptr CPattern -> IO a) -> IO a
withPattern (PhoneticPattern value) = withForeignPtr value
withRules :: PhoneticRules -> (Ptr CRules -> IO a) -> IO a
withRules (PhoneticRules value) = withForeignPtr value

transducer :: Algorithm -> DictionaryResource -> IO Transducer
transducer algorithm resource = withDictionaryResource resource $ \resourcePointer ->
  allocaBytes #{size void *} $ \output -> do
    cTransducerNew resourcePointer (fromIntegral (fromEnum algorithm)) output >>= check
    Transducer <$> (peekByteOff output 0 >>= newForeignPtr cTransducerFree)

closeTransducer :: Transducer -> IO ()
closeTransducer (Transducer value) = finalizeForeignPtr value

queryCache :: Int -> Int -> Transducer -> IO QueryCache
queryCache maximumEntries maximumWeight value
  | maximumEntries < 0 || maximumWeight < 0 =
      throwIO (userError "query-cache limits must be non-negative")
  | otherwise = withTransducer value $ \native ->
      allocaBytes #{size void *} $ \output -> do
        cQueryCacheNew native (fromIntegral maximumEntries)
          (fromIntegral maximumWeight) output >>= check
        QueryCache <$> (peekByteOff output 0 >>= newForeignPtr cQueryCacheFree)

closeQueryCache :: QueryCache -> IO ()
closeQueryCache (QueryCache value) = finalizeForeignPtr value

queryCacheStats :: QueryCache -> IO QueryCacheStats
queryCacheStats value = withQueryCache value $ \native ->
  allocaBytes #{size LlevQueryCacheStats} $ \output -> do
    cQueryCacheStats native output >>= check
    QueryCacheStats
      <$> #{peek LlevQueryCacheStats, requests} output
      <*> #{peek LlevQueryCacheStats, hits} output
      <*> #{peek LlevQueryCacheStats, misses} output
      <*> #{peek LlevQueryCacheStats, admissions} output
      <*> #{peek LlevQueryCacheStats, rejections} output
      <*> #{peek LlevQueryCacheStats, evictions} output
      <*> (fromIntegral <$> (#{peek LlevQueryCacheStats, resident_entries} output :: IO CSize))
      <*> (fromIntegral <$> (#{peek LlevQueryCacheStats, resident_weight} output :: IO CSize))

clearQueryCache :: QueryCache -> IO ()
clearQueryCache value = withQueryCache value $ \native -> cQueryCacheClear native >>= check

resetQueryCacheStats :: QueryCache -> IO ()
resetQueryCacheStats value =
  withQueryCache value $ \native -> cQueryCacheResetStats native >>= check

newCursor :: Ptr CCursor -> IO Cursor
newCursor pointer = Cursor <$> newForeignPtr cCursorFree pointer <*> newIORef []

queryBytesWith :: (Ptr CTransducer -> Ptr Word8 -> CSize -> CSize -> Word32
                 -> Ptr (Ptr CCursor) -> IO Status)
               -> QueryOrder -> Transducer -> ByteString -> Int -> IO Cursor
queryBytesWith action order value input maximum
  | maximum < 0 = throwIO (userError "maximum distance must be non-negative")
  | otherwise = withTransducer value $ \native -> BSU.unsafeUseAsCStringLen input $ \(p, n) ->
      allocaBytes #{size void *} $ \output -> do
        action native (castPtr p) (fromIntegral n) (fromIntegral maximum)
          (fromIntegral (fromEnum order)) output >>= check
        peekByteOff output 0 >>= newCursor
